--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="prof.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Jaime Manzueta</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <img src="prof.jpg" alt="Jaime Manzueta" style="max-width: 100%; height: auto;" />
+    </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
